fix(login): Fix login style and z-index issue
* Clean login box structure.
* Add display box to progress box component.

--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,31 +1,28 @@
 :host {
   display: block;
+
+  /* Custom style the login box. */
+  border-style: groove;
+  background-color: white;
+  padding: 20px;
+  margin: 3px;
 }
 
-  .container-right {
-    right: 0;
-    position: absolute;
- }
+button {
+  margin-bottom: 5px;
+}
 
- button {
-    margin-bottom: 5px;
- }
+input {
+  margin-bottom: 5px;
+}
 
- input {
-    margin-bottom: 5px;
-    }
+.background {
+  background-color: #fc634b;
+  color: white;
+}
 
- .background {
-     background-color: #fc634b;
-     color: white;
- }
+p {
+  text-align: center;
+}
 
- p {
-     text-align: center;
- }
 
- .groove-border {
-    border-style: groove;
-    background-color: white;
-    padding: 20px;
- }
