--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,3 +1,21 @@
 :host {
   display: block;
 }
+
+
+/* Customize size and position of Login box. */
+app-login {
+  /* Keeps box on top navbar when expanded on mobile. */
+  z-index: 1030;
+
+  position: absolute;
+  /* Keeps like-a-margin of 3 pixels horizontally (margin not used because it overflows outside page when applied with 100% width) */
+  right: 3px;
+  width: calc(100% - 6px);
+}
+/* Set a Max width on small devices (landscape phones, 576px and up). */
+@media (min-width: 576px) {
+  app-login {
+    max-width: 300px;
+  }
+}
